--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -11,8 +11,8 @@
 # if you're sharing your code publicly.
 
 development:
-  omniauth_provider_key: <%= ENV["OMNIAUTH_PROVIDER_KEY"] %>
-  omniauth_provider_secret: <%= ENV["OMNIAUTH_PROVIDER_SECRET"] %>
+  omniauth_provider_key: 473780139476320
+  omniauth_provider_secret: 324aabd3ab6ff17c3212669f401fe955
   email_provider_username: <%= ENV["SENDGRID_USERNAME"] %>
   email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %>
   domain_name: example.com
